# nekostream

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: messages.toml
src/: bridge.rs  config.rs  main.rs  messages.rs
