[package]
name = "nekostream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "6"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend", "utils"] }
songbird = { version = "0.6", features = ["builtin-queue"] }
symphonia = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
